<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/reg_titel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="40sp"
        android:gravity="center"
        android:text="@string/create_account_form"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="148dp" />

    <EditText
        android:id="@+id/reg_fn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/first_name"
        app:layout_constraintTop_toBottomOf="@+id/reg_titel"
        tools:layout_editor_absoluteX="99dp" />

    <EditText
        android:id="@+id/reg_ln"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/last_name"
        app:layout_constraintTop_toBottomOf="@+id/reg_fn"
        tools:layout_editor_absoluteX="101dp" />

    <EditText
        android:id="@+id/reg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/reg_ln"
        tools:layout_editor_absoluteX="99dp" />

    <EditText
        android:id="@+id/reg_pwrd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/reg_email"
        tools:layout_editor_absoluteX="101dp" />

    <Button
        android:id="@+id/reg_btn"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_selector"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/create"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_pwrd"
        app:layout_constraintVertical_bias="0.03" />

</androidx.constraintlayout.widget.ConstraintLayout>